# NextGen_Prep

./: .gitignore  main.py  pyproject.toml
app/application/admin/: bulk_upload_usecase.py
app/infrastructure/adaptive_system/: adaptive_engine.py  huggingface_client.py  llm_client.py  question_generation.py
app/infrastructure/db/models/: __init__.py  attempt_model.py  bandit_stats_model.py  concept_model.py  learning_session_model.py  mcq_model.py  mock_test_model.py  mock_test_session.py  notes.py  practice_session_model.py  question_model.py  subject_model.py  templates_model.py  topic_model.py  user_ability_model.py  user_mastery_model.py  user_model.py  user_response_model.py
app/infrastructure/repositories/: concept_repository.py  mcq_repo_impl.py  mock_test_repo_impl.py  note_repo.py  question_repository.py  response_repository.py  subject_repo_impl.py  subject_summary.py  template_repository.py  topic_repo_impl.py
app/infrastructure/security/: jwt_service.py
app/infrastructure/services/: practice_session_service.py
app/presentation/: dependencies.py
app/presentation/api/routers/: auth_routes.py  bulk_upload_router.py  concept_router.py  dashboard_router.py  mcq_router.py  mock_test_router.py  next_question.py  note_router.py  practice_router.py  subject_router.py  template_router.py  (+3 more)
app/presentation/schemas/: adaptive_schemas.py  bulk_mcq_schema.py  concept_schema.py  mcq_schema.py  mock_test_schema.py  mock_test_session_schema.py  practice_schemas.py  subject_schema.py  subject_summary_schemas.py  template_schema.py  topic_schema.py  user_schema.py
(+3 files in other folders)
